force-app/main/default/objects/OrderItem/fields/ShippingMethodNetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethodNetsuiteId__c</fullName>
    <label>Shipping Method NetsuiteId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>