force-app/main/default/objects/OrderItem/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>ShippingPostalCode</label>
    <length>55</length>
    <type>Text</type>
</CustomField>