force-app/main/default/objects/OrderItem/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <label>ShippingState</label>
    <length>155</length>
    <type>Text</type>
</CustomField>