force-app/main/default/objects/OrderItem/fields/ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To Line Items</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>