force-app/main/default/objects/OrderItem/fields/ShipToAccountName__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccountName__c</fullName>
    <formula>ShipToAccount__r.TempLegalName__c</formula>
    <label>Ship To Account Name</label>
    <type>Text</type>
</CustomField>