force-app/main/default/objects/OrderItem/fields/ShipToAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccountNumber__c</fullName>
    <formula>ShipToAccount__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to Account Number</label>
    <type>Text</type>
</CustomField>