force-app/main/default/objects/OrderItem/fields/ShipToAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipToAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-To Address</label>
    <referenceTo>ILAddress__c</referenceTo>
    <relationshipLabel>Order Products (Ship-To Address)</relationshipLabel>
    <relationshipName>Order_Products_Ship_To</relationshipName>
    <type>Lookup</type>
</CustomField>