force-app/main/default/objects/OrderItem/fields/ShipToAttentionOf__c.field-meta.xml
<CustomField>
    <fullName>ShipToAttentionOf__c</fullName>
    <description>For the attention of field. Specifically for persons and not delivery specifications</description>
    <inlineHelpText>For the attention of:</inlineHelpText>
    <label>Ship To Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>