force-app/main/default/objects/OrderItem/fields/ShipToLegalName__c.field-meta.xml
<CustomField>
    <fullName>ShipToLegalName__c</fullName>
    <formula>ShipToAccount__r.FullLegalName__c</formula>
    <label>Ship to Legal Name</label>
    <type>Text</type>
</CustomField>