force-app/main/default/objects/OrderItem/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <formula>Asset__r.SubscriptionIdNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Id</label>
    <type>Text</type>
</CustomField>