force-app/main/default/objects/OrderItem/fields/tmpAssetId__c.field-meta.xml
<CustomField>
    <fullName>tmpAssetId__c</fullName>
    <description>This field is used in the asset flow to temporarily store the Asset Id in order to recognize which order items need to create new or should use existing assets. DO NOT DELETE because of the TMP name.</description>
    <label>tmpAssetId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>