force-app/main/default/objects/OrderItem/fields/TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmount__c</fullName>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>