force-app/main/default/objects/OrderItem/fields/TrialEndDate__c.field-meta.xml
<CustomField>
    <fullName>TrialEndDate__c</fullName>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>