force-app/main/default/objects/OrderItem/fields/TrialStartDate__c.field-meta.xml
<CustomField>
    <fullName>TrialStartDate__c</fullName>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>