force-app/main/default/objects/OrderItem/fields/TriggerLeadCreation__c.field-meta.xml
<CustomField>
    <fullName>TriggerLeadCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for IC</description>
    <label>Trigger Lead Creation</label>
    <type>Checkbox</type>
</CustomField>