force-app/main/default/objects/OrderItem/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Normal&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Up-sell</fullName>
            </value>
            <value>
                <fullName>Cross-sell</fullName>
            </value>
            <value>
                <fullName>Auto-renewal</fullName>
            </value>
            <value>
                <fullName>Manual Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>