force-app/main/default/objects/OrderItem/fields/ValidateActivateAccountSubsidiaryRequir__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateAccountSubsidiaryRequir__c</fullName>
    <formula>IF(NetsuiteInternalId__c=null,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ActivateAccountSubsidiaryRequir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>