force-app/main/default/objects/OrderItem/fields/ValidateActivateDigitalActivationEmail__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateDigitalActivationEmail__c</fullName>
    <formula>IF(AND(NOT(CONTAINS(PricebookName__c, &quot;Zorg&quot;)), AND(
ProductType__c = &quot;Non-inventory Item&quot;,
DigitalActivationEMail__c = null)),1,0)</formula>
    <label>Validate ActivateDigitalActivationEmail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>