force-app/main/default/objects/OrderItem/fields/ValidateActivateNetSuiteId__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateNetSuiteId__c</fullName>
    <formula>IF(OR(NetSuiteIdBilltoAccount__c = null,
NetSuiteIdShiptoAccount__c = null),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ActivateNetSuiteId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>