force-app/main/default/objects/OrderItem/fields/ValidateActivateShippingAddressRequired__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateShippingAddressRequired__c</fullName>
    <formula>IF(AND(OR(Text(ShippingCountry__c) =&apos;Sweden&apos;, Text(ShippingCountry__c) =&apos;Netherlands&apos;, Text(ShippingCountry__c) =&apos;Belgium&apos;, Text(ShippingCountry__c) =&apos;Luxembourg&apos;),
OR(ShippingStreet__c = null,ShippingCity__c = null,Text(ShippingCountry__c) = null,ShippingPostalCode__c = null)),1,0)</formula>
    <label>Validate ActivateShippingAddressRequired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>