force-app/main/default/objects/OrderItem/fields/ValidateActiveandNoAsset__c.field-meta.xml
<CustomField>
    <fullName>ValidateActiveandNoAsset__c</fullName>
    <formula>IF(AND(ISBLANK(AssetIdValidate__c), TEXT(OrderStatus__c) =&apos;Activated&apos;,NOT(ISNULL(LastUpdateToAWS__c ))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Active and No Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>