force-app/main/default/objects/OrderItem/fields/ValidateAll__c.field-meta.xml
<CustomField>
    <fullName>ValidateAll__c</fullName>
    <formula>ValidateActivateAccountSubsidiaryRequir__c +
ValidateActivateDigitalActivationEmail__c + 
ValidateActivateNetSuiteId__c +
ValidateActivateShippingAddressRequired__c +
ValidateOrderLineTypeCheck__c +
ValidateCannotSellLicenseMoreThan12Mont__c +
ValidateProductComponentNonRenewable__c +
validateVATNetherlandsDigital__c +
ValidateDigitalforNetherlands__c +
ValidateActiveandNoAsset__c +
ValidateNetSalesPrice__c +
ValidateReferenceNumberCheck__c +
ValidateNetSalesPriceAgainstDiscount__c +
ValidateLineItemTotal__c +
ValidateCalculatedVAT__c + 
ValidateDigitalActivationEmail__c +
ValidateNegativeDiscount__c + 
ValidateNetSalesPriceCantbeNegative__c + 
ValidateNetsuiteQuantityMustbegreaterth__c +
ValidateProductMaxQuantity__c +
ValidateStartDate__c + 
ValidateEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>