force-app/main/default/objects/OrderItem/fields/ValidateCalculatedVAT__c.field-meta.xml
<CustomField>
    <fullName>ValidateCalculatedVAT__c</fullName>
    <formula>IF( AND(OrderImportVAT__c &gt; 0, 
        VATCalculated__c !=  OrderImportVAT__c), 
1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compares VAT &amp; Order Import VAT. (Currently Only Used for eCommerce Orders)</inlineHelpText>
    <label>Validate Calculated VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>