force-app/main/default/objects/OrderItem/fields/ValidateCannotSellLicenseMoreThan12Mont__c.field-meta.xml
<CustomField>
    <fullName>ValidateCannotSellLicenseMoreThan12Mont__c</fullName>
    <formula>IF(AND(ISPICKVAL(OperatingCompany__c,&quot;Plantyn&quot;),ProductLicenseDuration__c &gt; 12),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate CannotSellLicenseMoreThan12Mont</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>