force-app/main/default/objects/OrderItem/fields/ValidateDigitalActivationEmail__c.field-meta.xml
<CustomField>
    <fullName>ValidateDigitalActivationEmail__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Validate DigitalActivationEmail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>