force-app/main/default/objects/OrderItem/fields/ValidateDigitalforNetherlands__c.field-meta.xml
<CustomField>
    <fullName>ValidateDigitalforNetherlands__c</fullName>
    <formula>IF(AND(TEXT(ShippingCountry__c) = &apos;Netherlands&apos;,
OrderMultipleShippingLocations__c = true,
ProductType__c = &apos;Non-inventory Item&apos;,
TEXT(OperatingCompany__c) = &apos;Plantyn&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValidateDigitalforNetherlands</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>