force-app/main/default/objects/OrderItem/fields/ValidateEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidateEndDate__c</fullName>
    <formula>IF(AND(ISPICKVAL(Subtype__c, &apos;Subscription&apos;),ISBLANK(EndDate)),1,0)</formula>
    <label>Validate EndDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>