force-app/main/default/objects/OrderItem/fields/ValidateItemGroupBlock__c.field-meta.xml
<CustomField>
    <fullName>ValidateItemGroupBlock__c</fullName>
    <formula>IF( Product2.itemGroupManualBlock__c = true,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The item group is blocked due to missing components synced from NetSuite</inlineHelpText>
    <label>Validate ItemGroupBlock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>