force-app/main/default/objects/OrderItem/fields/ValidateLineItemTotal__c.field-meta.xml
<CustomField>
    <fullName>ValidateLineItemTotal__c</fullName>
    <formula>IF( AND( OrderImportLineTotal__c &gt; 0 ,
         LineItemTotal__c !=  OrderImportLineTotal__c), 
1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compares Line Item Total &amp; Order Import Line Total. (Currently Only Used for eCommerce Orders)</inlineHelpText>
    <label>Validate Line Item Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>