force-app/main/default/objects/OrderItem/fields/ValidateNegativeDiscount__c.field-meta.xml
<CustomField>
    <fullName>ValidateNegativeDiscount__c</fullName>
    <formula>IF(Discount__c &lt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate NegativeDiscount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>