force-app/main/default/objects/OrderItem/fields/ValidateNetSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>ValidateNetSalesPrice__c</fullName>
    <formula>IF((ISPICKVAL(OrderLineType__c, &quot;Free&quot;) &amp;&amp; UnitPrice &gt; 0) || (ISPICKVAL(OrderLineType__c, &quot;Service&quot;) &amp;&amp; UnitPrice &gt; 0),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate NetSalesPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>