force-app/main/default/objects/OrderItem/fields/ValidateNetSalesPriceAgainstDiscount__c.field-meta.xml
<CustomField>
    <fullName>ValidateNetSalesPriceAgainstDiscount__c</fullName>
    <formula>IF(
    NOT(
        TEXT(OrderStatus__c) = &apos;Activated&apos;
    )
    ,(IF(OR(ISNULL(ComponentListPrice__c),ComponentListPrice__c=0),0,
    IF(UnitPrice &gt; ComponentListPrice__c - ((ComponentListPrice__c * ListPriceDiscountRate__c) / 100), 1, 0))),
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate NetSalesPriceAgainstDiscount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>