force-app/main/default/objects/OrderItem/fields/ValidateNetSalesPriceCantbeNegative__c.field-meta.xml
<CustomField>
    <fullName>ValidateNetSalesPriceCantbeNegative__c</fullName>
    <formula>IF(UnitPrice &lt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate NetSalesPriceCantbeNegative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>