force-app/main/default/objects/OrderItem/fields/ValidateNetsuiteQuantityMustbegreaterth__c.field-meta.xml
<CustomField>
    <fullName>ValidateNetsuiteQuantityMustbegreaterth__c</fullName>
    <formula>IF(NetsuiteQuantity__c &lt; 1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate NetsuiteQuantityMustbegreaterth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>