force-app/main/default/objects/OrderItem/fields/ValidateOrderLineTypeCheck__c.field-meta.xml
<CustomField>
    <fullName>ValidateOrderLineTypeCheck__c</fullName>
    <formula>IF(((ISPICKVAL(OrderLineType__c, &quot;Regular&quot;) &amp;&amp; IsRegularOrderPossible__c = false) || (ISPICKVAL(OrderLineType__c, &quot;InspectionCopy&quot;) &amp;&amp; IsInspectionCopyOrderPossible__c = false) || (ISPICKVAL(OrderLineType__c, &quot;UseCopy&quot;) &amp;&amp; IsUseCopyOrderPossible__c = false)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate OrderLineTypeCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>