force-app/main/default/objects/OrderItem/fields/ValidateProductComponentNonRenewable__c.field-meta.xml
<CustomField>
    <fullName>ValidateProductComponentNonRenewable__c</fullName>
    <formula>IF(OR(AND(ItemGroupId__c != null,   Renewable__c = true),
		AND(ProductType__c = &apos;Item Group&apos;,   Renewable__c = true)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ProductComponentNonRenewable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>