force-app/main/default/objects/OrderItem/fields/ValidateProductMaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>ValidateProductMaxQuantity__c</fullName>
    <description>Quantity Cannot be great than Product Maximum quantity</description>
    <formula>IF(OR(ISPICKVAL(OrderLineType__c, &quot;Scrap&quot;),ISPICKVAL(OrderLineType__c, &quot;Transfer&quot;),  OrderSource__c = &quot;Depot&quot; ), 0,
IF(AND(NOT(ISBLANK(ProductMaxQuantity__c)), OR(NetsuiteQuantity__c &gt; ProductMaxQuantity__c, Quantity &gt; ProductMaxQuantity__c)), 
1, 0))</formula>
    <label>Validate ProductMaxQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>