force-app/main/default/objects/OrderItem/fields/ValidateReferenceNumberCheck__c.field-meta.xml
<CustomField>
    <fullName>ValidateReferenceNumberCheck__c</fullName>
    <formula>/**
IF(
NOT(
TEXT(OrderStatus__c) = &apos;Activated&apos;
)
,(IF((TEXT(OperatingCompany__c) = &apos;Plantyn&apos; || AND(TEXT(OperatingCompany__c) = &apos;Noordhoff&apos;, NOT(CONTAINS(PricebookName__c, &apos;Zorg&apos;)))) &amp;&amp; NOT(IsPricebookInformat__c) &amp;&amp; LEN(CustomerReference__c) &gt; 10, 1,
IF(TEXT(OperatingCompany__c) = &apos;Liber&apos; &amp;&amp; NOT(IsPricebookInformat__c) &amp;&amp; LEN(CustomerReference__c) &gt; 35, 1,
IF(IsPricebookInformat__c &amp;&amp; LEN(CustomerReference__c) &gt; 45, 1, 
IF(AND(TEXT(OperatingCompany__c) = &apos;Noordhoff&apos;, CONTAINS(PricebookName__c, &apos;Zorg&apos;), ProductType__c = &apos;Inventory Item&apos;, LEN(CustomerReference__c) &gt; 10), 1, 0))))),
0)
**/

IF(NOT(ISPICKVAL(OrderStatus__c,&quot;Activated&quot;)),
			(IF(AND(OR(ISPICKVAL(OperatingCompany__c,&quot;Plantyn&quot;),ISPICKVAL(OperatingCompany__c,&quot;Noordhoff&quot;)),NOT(IsPricebookInformat__c),LEN(CustomerReference__c) &gt; 30),1,
				    IF(AND(ISPICKVAL(OperatingCompany__c,&quot;Liber&quot;),LEN(CustomerReference__c) &gt; 35),1,
				        IF(AND(IsPricebookInformat__c,LEN(CustomerReference__c) &gt; 45),1,0
														)
										)
						)
			),0
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ReferenceNumberCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>