force-app/main/default/objects/OrderItem/fields/ValidateStartDate__c.field-meta.xml
<CustomField>
    <fullName>ValidateStartDate__c</fullName>
    <formula>IF(AND(ISPICKVAL(Subtype__c, &apos;Subscription&apos;),ISBLANK(StartDate__c)),1,0)</formula>
    <label>Validate StartDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>