force-app/main/default/objects/OrderItem/fields/validateVATNetherlandsDigital__c.field-meta.xml
<CustomField>
    <fullName>validateVATNetherlandsDigital__c</fullName>
    <formula>IF(AND(Text(ShippingCountry__c) = &apos;Netherlands&apos;,
ProductType__c= &apos;Non-inventory Item&apos;, TEXT(OperatingCompany__c) = &apos;Plantyn&apos;), 1, 0)</formula>
    <label>validateVATNetherlandsDigital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>