force-app/main/default/objects/OrderItem/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <label>zRemove Validation Order Line Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>