force-app/main/default/objects/OrderItem/fields/VATCalculated__c.field-meta.xml
<CustomField>
    <fullName>VATCalculated__c</fullName>
    <description>This field stores the VAT calculated in Apex per Order Product to use this value in a formula field validation to workaround the issue of using a lookup in a formula field that is part of a roll up summary.</description>
    <label>VAT Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>