force-app/main/default/objects/OrderItem/fields/VATRule__c.field-meta.xml
<CustomField>
    <fullName>VATRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT Rule</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>