force-app/main/default/objects/OrderItem/fields/WarehouseReferenceActive__c.field-meta.xml
<CustomField>
    <fullName>WarehouseReferenceActive__c</fullName>
    <formula>Order.WarehouseReferenceActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse reference active</label>
    <type>Checkbox</type>
</CustomField>