force-app/main/default/objects/OrderItem/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <formula>if(OR(TEXT(OrderLineType__c)=&apos;Inspection Copy&apos;,TEXT(OrderLineType__c)=&apos;Service&apos;),0,Product2.Weight__c * Quantity)</formula>
    <inlineHelpText>Is used to calculate what weight should be used for shipping cost indications. Is impacted by order line type.</inlineHelpText>
    <label>Weight for Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>