force-app/main/default/objects/OrderItem/validationRules/ActivateAccountSubsidiaryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateAccountSubsidiaryRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(OrderStatus__c)=&apos;Activated&apos;,NetsuiteInternalId__c=null)</errorConditionFormula>
    <errorMessage>Activated Orders must have Account Subsidiary on order line items for Ship to Accounts</errorMessage>
</ValidationRule>