force-app/main/default/objects/OrderItem/validationRules/ActivateDigitalActivationEmailRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateDigitalActivationEmailRequired</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
				AND(
								ProductType__c = &quot;Non-inventory Item&quot;,
				    TEXT(Order.Status)=&apos;Activated&apos;),
			 DigitalActivationEMail__c = null,false)</errorConditionFormula>
    <errorMessage>Digital Activation Email is required with productype &quot;Non-Inventory Item</errorMessage>
</ValidationRule>