force-app/main/default/objects/OrderItem/validationRules/ActivateNetSuiteId.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateNetSuiteId</fullName>
    <active>false</active>
    <errorConditionFormula>OR(NetSuiteIdBilltoAccount__c = null,
			NetSuiteIdShiptoAccount__c = null)</errorConditionFormula>
    <errorMessage>Netsuite Id is required on ShipTo and BillTo</errorMessage>
</ValidationRule>