force-app/main/default/objects/OrderItem/validationRules/ActivateShippingAddressRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateShippingAddressRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Order.Status)=&apos;Activated&apos;, 
				OR(ShippingStreet__c = null,
							ShippingCity__c = null,
							ShippingPostalCode__c = null))</errorConditionFormula>
    <errorMessage>Activated Orders must have Shipping Address information.</errorMessage>
</ValidationRule>