force-app/main/default/objects/OrderItem/validationRules/CannotSellLicenseMoreThan12Months.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotSellLicenseMoreThan12Months</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 LicenseDuration__c &gt; 12,
	TEXT(OrderStatus__c) = &quot;Activated&quot;
				)</errorConditionFormula>
    <errorMessage>You are not allowed to sell a subscription with a license duration of longer then 12 months.</errorMessage>
</ValidationRule>