force-app/main/default/objects/OrderItem/validationRules/CanthaveNegativeDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>CanthaveNegativeDiscount</fullName>
    <active>false</active>
    <errorConditionFormula>Discount__c &lt; 0</errorConditionFormula>
    <errorMessage>Cant have Negative Discount! Please click on the product and compare the price record and pricebook entry to verify net sales price</errorMessage>
</ValidationRule>