force-app/main/default/objects/OrderItem/validationRules/ItemGroupIsBlockedActivation.validationRule-meta.xml
<ValidationRule>
    <fullName>ItemGroupIsBlockedActivation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				Product2.itemGroupManualBlock__c = true,  
				TEXT(Order.Status) = &quot;Activated&quot;
)</errorConditionFormula>
    <errorMessage>This item group is blocked for ordering (manual), likely due to missing components in SF</errorMessage>
</ValidationRule>