force-app/main/default/objects/OrderItem/validationRules/MaxProductQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxProductQuantity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				NOT(ISPICKVAL(OrderLineType__c, &quot;Scrap&quot;)),
				TEXT(Order.Status) = &quot;Activated&quot;,
				OR(NetsuiteQuantity__c &gt; Product2.maxQuantity__c, Quantity &gt; Product2.maxQuantity__c)
)</errorConditionFormula>
    <errorMessage>Quantity Cannot be great than Product Maximum quantity</errorMessage>
</ValidationRule>