force-app/main/default/objects/OrderItem/validationRules/NetSalesPriceCantbenegative.validationRule-meta.xml
<ValidationRule>
    <fullName>NetSalesPriceCantbenegative</fullName>
    <active>false</active>
    <errorConditionFormula>UnitPrice &lt; 0</errorConditionFormula>
    <errorMessage>Net Sales Price Cant be negative</errorMessage>
</ValidationRule>