force-app/main/default/objects/OrderItem/validationRules/NetsuiteQuantityMustbegreaterthanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>NetsuiteQuantityMustbegreaterthanZero</fullName>
    <active>false</active>
    <errorConditionFormula>NetsuiteQuantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>NetsuiteQuantity__c</errorDisplayField>
    <errorMessage>Netsuite Quantity is required. This is used due item Group group component</errorMessage>
</ValidationRule>