force-app/main/default/objects/OrderItem/validationRules/ProductComponentNonRenewable.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductComponentNonRenewable</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(ItemGroupId__c != null,   Renewable__c = true),
 		AND(ProductType__c = &apos;Item Group&apos;,   Renewable__c = true))</errorConditionFormula>
    <errorMessage>Product Components can&apos;t be renewed</errorMessage>
</ValidationRule>