force-app/main/default/objects/OrderItem/validationRules/Validate_Order_Item_Reference_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Order_Item_Reference_Number</fullName>
    <active>false</active>
    <errorConditionFormula>Validation__c  = 1</errorConditionFormula>
    <errorDisplayField>CustomerReference__c</errorDisplayField>
    <errorMessage>The order item reference number contains too many characters.</errorMessage>
</ValidationRule>